dev feature final

--- a/notebooks/03-multiple-linear-regression.ipynb
+++ b/notebooks/03-multiple-linear-regression.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -220,13 +220,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# ## Visualization và Phân tích Kết quả\n",
-        "# \n",
-        "# Trong phần này, chúng ta sẽ visualize:\n",
-        "# - Quá trình học của model (learning curve)\n",
-        "# - So sánh giá trị thực tế vs dự đoán\n",
-        "# - Phân tích residuals để đánh giá chất lượng model\n",
-        "# \n"
+        "## Visualization và Phân tích Kết quả\n",
+        "\n",
+        "Trong phần này, chúng ta sẽ visualize và phân tích kết quả của model:\n",
+        "\n",
+        "- **Learning Curve**: Theo dõi quá trình học của model qua các iterations\n",
+        "- **Actual vs Predicted**: So sánh giá trị thực tế với giá trị dự đoán\n",
+        "- **Residual Analysis**: Phân tích sai số để đánh giá chất lượng model\n",
+        "- **Feature Importance**: Hiểu tầm quan trọng của từng feature\n"
       ]
     },
     {
@@ -240,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -352,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -362,7 +363,13 @@
             "Training models with different regularizations...\n",
             "============================================================\n",
             "\n",
-            "Training RIDGE with alpha=0.01\n",
+            "Training RIDGE with alpha=0.01\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "  Train MSE: 0.4275, Test MSE: 0.4067\n",
             "  Train R²: 0.9991, Test R²: 0.9988\n",
             "\n",
@@ -466,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
